# SPACE-SURVIVOR

./: README.md  main.py  project_overview.md  pyproject.toml
space shooting/: README.md  meta_progression.json  pyproject.toml  save_game.json
space shooting/src/abilities/: ability_base.py  bomb_ability.py  dash_ability.py  ultimate_ability.py
space shooting/src/audio/: audio_manager.py
space shooting/src/entities/: Bullet.py  Enemy.py  TankEnemy.py  player.py  xp_gem.py
space shooting/src/lib/: event_bus.py  game_state.py  game_utility.py  meta_progression.py
space shooting/src/powers/: HomingPowerUp.py  health_boost.py  power_up_manager.py
space shooting/src/screens/: base_overlay.py  parallax_bg.py  shop.py
space shooting/src/screens/ui/: virtual_controls.py
src/config/: config.py
src/entities/: BossEnemy.py  BulletEnemy.py  EnemySpawner.py  FastEnemy.py  HomingMissile.py
src/lib/: analytics.py  object_pool.py  particle_system.py  screen_shake.py
src/powers/: BoltPower.py  Shield.py  Speed.py  TripleShot.py  fast_bullets.py  power_up_base.py  stronger_bullets.py
src/screens/: game_hud.py  level_up_screen.py  menu.py  parallax_bg.py  pause.py  restart.py
src/screens/ui/: health_bar.py  virtual_controls.py
